[package]
name = "asen-backend"
version = "0.1.0"
authors = ["aryan <aryan98@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = "1.0"
eyre = "0.6.5"
thiserror = "1.0.24"
