[package]
name = "asen-backend"
version = "0.1.0"
authors = ["aryan <aryan98@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = "1.0"
color-eyre = "0.5.10"
thiserror = "1.0.24"
