[package]
name = "asen-backend"
version = "0.1.0"
authors = ["aryan <aryan98@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = "1.0"
color-eyre = "0.5.10"
thiserror = "1.0.24"
